[gd_scene load_steps=14 format=3 uid="uid://b5bh32jafe1cc"]

[ext_resource type="Script" path="res://scenes/scripts/player/player.gd" id="1_00inp"]
[ext_resource type="Texture2D" uid="uid://dohvaby8rmkih" path="res://sprites/Player/feet_1.png" id="1_pn3ky"]
[ext_resource type="Resource" uid="uid://7gfn5bnxp6da" path="res://resources/DefaultMovementData.tres" id="2_gbau0"]
[ext_resource type="Texture2D" uid="uid://bffrosy7ri7w8" path="res://sprites/Player/feet_4.png" id="4_7uaqw"]
[ext_resource type="Texture2D" uid="uid://ia81hgptma2p" path="res://sprites/Player/feet_2.png" id="4_uspov"]
[ext_resource type="Texture2D" uid="uid://dewmj1y1s3o71" path="res://sprites/Player/feet_3.png" id="5_m2rje"]
[ext_resource type="AudioStream" uid="uid://cociki20b2gdf" path="res://scenes/sounds/jump.wav" id="7_renv3"]
[ext_resource type="AudioStream" uid="uid://dkk2b1i3o81eg" path="res://scenes/sounds/hitHurt.wav" id="8_0qnah"]
[ext_resource type="AudioStream" uid="uid://dva8cq83r2gv6" path="res://scenes/sounds/pickupFloor.wav" id="9_pya4f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vp1pq"]
size = Vector2(21, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_mouc0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_pn3ky")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_7uaqw")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_uspov")
}, {
"duration": 1.0,
"texture": ExtResource("1_pn3ky")
}, {
"duration": 1.0,
"texture": ExtResource("5_m2rje")
}],
"loop": true,
"name": &"Walk",
"speed": 12.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_p810s"]
size = Vector2(30, 0.415)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fuwpq"]
size = Vector2(23, 10)

[node name="Player" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
floor_max_angle = 0.698132
floor_snap_length = 3.0
script = ExtResource("1_00inp")
movement_data = ExtResource("2_gbau0")
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_vp1pq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mouc0")
animation = &"Idle"

[node name="UpRaycast" type="ShapeCast2D" parent="."]
modulate = Color(0.967637, 0.844337, 1, 1)
position = Vector2(0, -3)
enabled = false
shape = SubResource("RectangleShape2D_p810s")
target_position = Vector2(0, -0.785)

[node name="HoveringTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
offset = Vector2(0, -70)
process_callback = 0
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 36

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_fuwpq")
debug_color = Color(0.961248, 0, 0.511433, 0.42)

[node name="SoundJump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("7_renv3")
bus = &"SFX"

[node name="SoundHit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("8_0qnah")
bus = &"SFX"

[node name="SoundGotFloor" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_pya4f")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
